src/components/Account/AccountBottomMenu/BottomMenu.module.css
.bottomMenu {
  position: fixed;
  bottom: 13.4%;
  left: 50%;
  right: 50%;
  z-index: 1000;

  transition: all 0.3s ease;
  transform: translateX(-50%);

  width: 63%;
  padding: 5px 10px;
  display: flex;
  justify-content: space-around;
  align-items: center;

  background-color: #0d0d0d;
  /* border: 0.5px solid #e0e0e02e; */
  border-radius: 10px;
}

.bottomMenuBorder {
  position: fixed;
  bottom: 13.2%;
  left: 50%;
  right: 50%;
  z-index: 999;
  transform: translateX(-50%);
  width: 63.5%;
  height: 47px;
  padding: 5px 10px;
  border-radius: 10px;
  overflow: hidden;
  transition: all 0.3s ease;
  background-color: #a4a4a455;
}

.bottomMenuBorder::before,
.bottomMenuBorder::after {
  content: "";
  position: absolute;
  width: 40px;
  height: 40px;
  border-radius: 50%;
  background: linear-gradient(
    90deg,
    rgba(255, 255, 255, 0) 0%,
    rgba(255, 255, 255, 0.878) 40%,
    rgba(255, 255, 255, 0.878) 60%,
    rgba(255, 255, 255, 0) 100%
  );
}

.bottomMenuBorder::before {
  top: -50%;
  left: -80%;
  filter: blur(5px);
  animation: moveTopLine 15s ease-in-out infinite;
}

.bottomMenuBorder::after {
  bottom: -50%;
  right: -80%;
  filter: blur(5px);
  animation: moveBottomLine 15s ease-in-out infinite;
}

@keyframes moveTopLine {
  0% {
    left: -100%;
  }
  50% {
    left: 100%;
  }
  100% {
    left: -100%;
  }
}

@keyframes moveBottomLine {
  0% {
    right: -100%;
  }
  50% {
    right: 100%;
  }
  100% {
    right: -100%;
  }
}

.firstItemActive {
  transform: translateX(-14%);
}

.secondItemActive {
  transform: translateX(-32%);
}

.thirdItemActive {
  transform: translateX(-50%);
}

.fourthItemActive {
  transform: translateX(-68%);
}

.fifthItemActive {
  transform: translateX(-87%);
}

.tab {
  width: 35px;
  height: 35px;
  border: 0.5px solid #e0e0e02e;
  background-color: #0d0d0d;
  border-radius: 3px;
  margin: 0 6px;

  display: flex;
  justify-content: center;
  align-items: center;

  font-size: 15px;
  color: #e0e0e0;
  transition: all 0.3s ease;
  transform-origin: center center;
}

.activeTab {
  transform: scale(1.3) translateY(-15px);
}

.secondaryTab {
  transform: scale(1.1) translateY(-9px);
}

